<resources>
    <string name="app_name">carecareers</string>

    <string name="err_no_data_available">No Data Available</string>
    <string name="err_no_location_selected">Please select location.</string>
    <string name="err_no_area_selected">Please select a location.</string>
    <string name="err_no_file_selected">Please select file.</string>
    <string name="err_no_file_type_selected">Please select file type.</string>

    <string name="title_activity_landing">LandingActivity</string>
    <string name="title_personal_details">Personal Details</string>
    <string name="title_preferred_location">Preferred Location</string>
    <string name="title_select_avatar">@string/tv_select_an_avatar</string>
    <string name="title_location_area">Location/Area</string>
    <string name="title_my_profile">My profile</string>
    <string name="title_profession_role">Profession/role</string>
    <string name="title_upload_file">Upload file</string>

    <!--TextViews-->
    <string name="lorem_epsum">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. </string>
    <string name="tv_landing_welcom_message">Welcome to carecareers,\nthe care sector\'s job market</string>
    <string name="tv_register">Register</string>
    <string name="tv_menu">Menu</string>
    <string name="tv_login">Login</string>
    <string name="tv_uploading">Uploading...</string>
    <string name="tv_upload_percent">Upload percent</string>
    <string name="tv_crop">Crop</string>
    <string name="tv_cancel">Cancel</string>
    <string name="tv_turn_on">Turn On</string>
    <string name="tv_terms_conditions">By registering, you are agreeing to the \n <u>Terms &amp; Conditions</u></string>
    <string name="tv_forgot_email">Enter the email you registered with:</string>
    <string name="tv_submit">Submit</string>
    <string name="tv_skip">Skip</string>
    <string name="tv_next">Next</string>
    <string name="tv_profile_greetings">Thank you for registering. Lets\'s get your profile set up so employers can find you.</string>
    <string name="tv_upload_photo">Upload Photo</string>
    <string name="tv_select_an_avatar"><u>Select an avatar</u></string>
    <string name="tv_click_on_avatar">Click on an avatar to add to your profile</string>
    <string name="tv_edit_profile_details">Edit your profile details below.</string>
    <string name="tv_preview_profile"><u>Preview profile</u></string>
    <string name="tv_personal_details">Personal Details</string>
    <string name="tv_education">Education</string>
    <string name="tv_employment">Employment</string>
    <string name="tv_files">Files</string>
    <string name="tv_take_photo">Take photo</string>
    <string name="tv_choose_from_gallery">Choose from gallery</string>
    <string name="tv_personal_search_settings">Personal Search Settings</string>
    <string name="tv_hi">Hi, </string>
    <string name="tv_upload_your_files">Please upload your files.</string>
    <string name="tv_select_file">Select file</string>
    <string name="tv_type">Type</string>
    <string name="tv_name_of_search">Name of Search *</string>
    <string name="tv_search_details">Search Details</string>
    <string name="tv_profession_or_role">Profession / role</string>
    <string name="tv_keyword">Keywords</string>
    <string name="tv_shortlist_jobs">Shortlist Jobs</string>
    <string name="tv_searches"><u>Searches</u></string>
    <string name="tv_job_name"><b>Aged care</b></string>
    <string name="tv_preferred_location">Preferred Location(s)</string>
    <string name="tv_preferred_industry">Preferred Industry(s)</string>
    <string name="tv_next_career_move">Next Career Move</string>
    <string name="tv_forgot_password">Forgot Password</string>
    <!--SettingsProfile-->
    <string name="tv_settings_change_password">Change Password</string>
    <string name="tv_settings_terms_and_conditions">Terms &amp; Conditions</string>
    <string name="tv_settings_privacy_policy">Privacy Policy</string>
    <string name="tv_settings_share_app">Share app</string>
    <string name="tv_settings_logout">Logout</string>
    <string name="tv_settings_upload_file">Upload file</string>

    <!--JobSearch Screen-->
    <string name="tv_search">Search</string>
    <string name="tv_favorite_searches"><u>View my favourite searches</u></string>
    <string name="tv_starting_out">Starting out \nEntering the sector</string>
    <string name="tv_title_starting_out">Starting Out</string>
    <string name="tv_apply">Apply</string>
    <string name="tv_filter">Filters</string>
    <string name="tv_results">Results:</string>

    <!--JobDetailsScreen-->
    <string name="tv_view_details">View Details</string>
    <string name="tv_job_advertiser">View more jobs from this advertiser</string>
    <string name="tv_job_description">Description</string>
    <string name="tv_date_posted">Date posted:</string>
    <string name="tv_sector">Sector</string>
    <string name="tv_profession">Profession:</string>
    <string name="tv_location">Location:</string>
    <string name="tv_job_details">Job Details</string>
    <string name="tv_job_work_type">Worktype:</string>

    <!--JobFilter-->
    <string name="tv_title_select_filter">Select Filters</string>

    <!--Error-->
    <string name="err_firstname">Please enter your first name.</string>
    <string name="err_username">Please enter your username.</string>
    <string name="err_lastname">Please enter your last name.</string>
    <string name="err_email">Please enter a email address.</string>
    <string name="err_email_valid">Please enter a valid email address.</string>
    <string name="err_password">Please enter a password.</string>
    <string name="err_current_password">Please enter a current password.</string>
    <string name="err_new_password">Please enter a new password.</string>
    <string name="err_password_length">Please enter password of length 8 character.</string>
    <string name="err_password_uppercase">Password must contain one uppercase letter.</string>
    <string name="err_new_password_uppercase">New Password must contain one uppercase letter.</string>
    <string name="err_state_name">Please select a state.</string>
    <string name="err_">Error</string>

    <!--Success-->
    <string name="sucess_forgot_email">A password reset link has been sent to your email. Please reset your password.</string>
    <string name="sucess_registration">Registration has been done successfully.</string>
    <string name="sucess_change_password">Password has been changed successfully.</string>

    <!--EditTexts-->
    <string name="et_email">Email</string>
    <string name="et_password">Password</string>
    <string name="et_forgot_password"><u>Forgot Your Password?</u></string>

    <!--Hints-->
    <string name="hint_email_example">email@example.com</string>
    <string name="hint_current_password">Current Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_state">State *</string>
    <string name="hint_first_name">First name *</string>
    <string name="hint_last_name">Last name *</string>
    <string name="hint_email">Email address *</string>
    <string name="hint_sign_up_password">Password *</string>
    <string name="hint_search_keywords">Keywords</string>

    <string name="hint_phone_number">Phone number</string>
    <string name="hint_work_near_here">I\'d like to work near here*</string>
    <string name="hint_location_area">Location/area*</string>
    <string name="hint_profession_role">Profession/role*</string>
    <string name="hint_work_type">Work type*</string>
    <string name="hint_what_would_u_like_to_do">What would you like to do?</string>
    <string name="hint_search">Search</string>

    <!--Messages-->
    <string name="msg_loading">Loading...</string>
    <string name="msg_logout">Are you sure you want to logout?</string>
    <string name="msg_success">Success!</string>

    <!--Fonts-->
    <string name="font_source_san_pro_regular">fonts/SourceSansPro-Regular.ttf</string>
    <string name="font_source_san_pro_light">fonts/SourceSansPro-Light.ttf</string>
    <string name="font_source_san_pro_semi_bold">fonts/SourceSansPro-Semibold.ttf</string>
    <string name="font_source_san_pro_bold">fonts/SourceSansPro-Bold.ttf</string>


    <string name="menu_done">Done</string>
    <string name="menu_settings">Settings</string>


    <!--BottomBarNavigation Menus-->
    <string name="search">Search</string>
    <string name="save_lists">Saved</string>
    <string name="applications">Applications</string>
    <string name="job_alerts">Job Alerts</string>
    <string name="profile">Profile</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_sort">Sort</string>
    <string name="tv_save_search">Save Search</string>


    <string name="info_preferred_location">Sed ut otam rem aperiam, eaque ipsa quae ab illo inventore veritatis</string>
    <string name="info_nxt_career_move">Sed ut eriam, eaque ipsa quae ab illo inventore veritatis</string>
    <string name="hint_filter_salary">Salary</string>
    <string name="menu_most_relevant">Most Relevant</string>
    <string name="menu_most_viewed">Most Viewed</string>
    <string name="menu_alphabetical">Alphabetical</string>
    <string name="menu_most_recent">Most Recent</string>


    <string-array name="file_types">
        <item>Type</item>
        <item>Resume</item>
        <item>Cover letter</item>
        <item>File</item>
    </string-array>
</resources>
