<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_unselected"
        android:title="@string/search" />
    <item
        android:id="@+id/menu_saved_lists"
        android:icon="@drawable/ic_search_unselected"
        android:title="@string/save_lists" />

    <item
        android:id="@+id/menu_applied_jobs"
        android:icon="@drawable/ic_star_unselected"
        android:title="@string/applied_jobs" />

    <item
        android:id="@+id/menu_job_alerts"
        android:icon="@drawable/ic_bell_unselected"
        android:title="@string/job_alerts" />
    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_profile_unselected"
        android:title="@string/profile" />
</menu>