<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".homeModule.myProfile.MyProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/dimen_15dp">

            <TextView
                android:id="@+id/tv_greetings_hi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_hi"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/txt_normal" />

            <TextView
                android:id="@+id/tv_greetings_name"
                fontPath="@string/font_source_san_pro_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/txt_normal"
                tools:text="  User" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_edit_profile_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_5dp"
            android:text="@string/tv_edit_profile_details"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/txt_normal" />

        <ImageView
            android:id="@+id/iv_profile_image"
            android:layout_width="@dimen/dimen_85dp"
            android:layout_height="@dimen/dimen_85dp"
            android:layout_margin="@dimen/dimen_15dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile_placeholder" />

        <TextView
            android:id="@+id/tv_preview_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_40dp"
            android:padding="@dimen/dimen_5dp"
            android:text="@string/tv_preview_profile"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/txt_normal" />

        <TextView
            android:id="@+id/tv_personal_details"
            style="@style/TvMyProfile"
            android:layout_marginBottom="@dimen/dimen_15dp"
            android:text="@string/tv_personal_details" />

        <TextView
            android:id="@+id/tv_education"
            style="@style/TvMyProfile"
            android:layout_marginBottom="@dimen/dimen_15dp"
            android:text="@string/tv_education" />

        <TextView
            android:id="@+id/tv_employment"
            style="@style/TvMyProfile"
            android:layout_marginBottom="@dimen/dimen_15dp"
            android:text="@string/tv_employment" />

        <TextView
            android:id="@+id/tv_files"
            style="@style/TvMyProfile"
            android:layout_marginBottom="@dimen/dimen_15dp"
            android:text="@string/tv_files" />

        <TextView
            android:id="@+id/tv_personal_search_settings"
            style="@style/TvMyProfile"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:text="@string/tv_personal_search_settings" />

    </LinearLayout>

</ScrollView>