<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/save_search_toolbar"
        layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_20dp"
            android:text="@string/tv_name_of_search" />

        <EditText
            style="@style/EditText"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/search_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:text="@string/tv_search_details" />

            <TextView
                android:id="@+id/tv_search_keyword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:text="@string/tv_keyword" />

            <TextView
                android:id="@+id/tv_search_profession"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:text="@string/tv_profession_or_role" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>