<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent">

    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/dimen_16dp"
        android:text="@string/tv_submit"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/dimen_16dp"
        android:text="@string/tv_skip"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/dimen_16dp"
        android:text="@string/tv_next"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite" />

</FrameLayout>