<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="?actionBarSize"
    tools:context="au.com.carecareers.android.loginModule.login.LoginActivity">


    <include
        android:id="@+id/login_toolbar"
        layout="@layout/layout_toolbar" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/submit_view_register"
        android:layout_below="@+id/login_toolbar"
        android:background="@color/colorWhite">

        <au.com.carecareers.android.customViews.CapitalizedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/et_username"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:gravity="center_horizontal"
            android:text="@string/tv_forgot_email" />

        <EditText
            android:id="@+id/et_username"
            style="@style/EditText"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:hint="@string/hint_email_example"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/txt_15sp" />


    </RelativeLayout>

    <Button
        android:id="@+id/submit_view_register"
        style="@style/Button"
        android:layout_alignParentBottom="true"
        android:text="@string/tv_submit"
        android:textAllCaps="false" />

</RelativeLayout>
