<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dimen_10dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_job_apply"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:id="@+id/rl_job_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_item_job_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:lines="1"
                android:text="@string/tv_job_details"
                android:textColor="@color/textColorPrimary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_item_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_item_job_details"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:lines="1"
                android:text="@string/tv_location"
                android:textColor="@color/textColorPrimary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_item_profession"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_item_location"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:text="@string/tv_profession"
                android:textColor="@color/textColorPrimary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_item_sector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_item_profession"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:text="@string/tv_sector"
                android:textColor="@color/textColorPrimary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_item_posted_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_item_sector"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:text="@string/tv_date_posted"
                android:textColor="@color/textColorPrimary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_item_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_item_posted_date"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:text="@string/lorem_epsum"
                android:textColor="@color/textColorPrimary"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_view_jobs_advertiser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_item_description"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/dimen_20dp"
                android:background="@drawable/btn_job_search"
                android:text="@string/tv_job_advertiser"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/txt_15sp" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:id="@+id/rl_job_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0.5dp"
            android:background="@color/colorHint" />

        <ImageView
            android:id="@+id/iv_item_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:contentDescription="@null"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_star_unselected" />

        <ImageView
            android:id="@+id/iv_item_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_toEndOf="@+id/iv_item_save"
            android:layout_toRightOf="@+id/iv_item_save"
            android:contentDescription="@null"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_star_unselected" />

        <Button
            android:id="@+id/btn_job_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dimen_30dp"
            android:layout_marginRight="@dimen/dimen_30dp"
            android:layout_toEndOf="@+id/iv_item_share"
            android:layout_toRightOf="@+id/iv_item_share"
            android:background="@drawable/btn_job_search"
            android:text="@string/tv_apply"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/txt_15sp" />
    </RelativeLayout>
</RelativeLayout>